# hellofriendFS

./: .gitignore  1. GitHub_setup.txt  10. DRF.txt  10b. JWT-Auth  11. DRF_part_two.txt  12. Securing_the_app.txt  12a. Djoser_setup.txt  13. Unit_testing.txt  14. Fullstack_setting_up_booking.txt  2. Django_setup.txt  3. Django_app_setup.txt  4. Commiting_project.txt  5. urls.txt  6. Static_files_setup.txt  7. MySQL.txt  8. Migrate_models.txt  9. Push_to_GIT.txt  DO_AFTER.md  FE_BRIEF_useLiveSessionDetail.md  FRIEND_ALLTIME_STATS_PLAN.md  GECKO_MESSAGE_CODES.md  GECKO_MOMENT_SYNC_NOTES.md  GUNICORN_AND_DROPLET_COMMANDS.md  GeckoWebsocketContext.rust.tsx  Keys_and_passwords.txt  MAINTENANCE_CHECKLIST.md  RESUME_session_id_geckowins.txt  SCORE_SYSTEM.md  STAGING_SETUP.md  b.reactwithjwtsetup.txt  binary_ws_frontend_instructions.md  hellofriendstyling.txt  lightdarkcontextexcercise.txt  loadingspinneranddeployment.txt  loadtest_users.json  nginx_performance_debugging.txt  reactwithjwtsetup.txt  redis_performance_debugging.txt  secretkeycacheissue.txt  socket_lag_investigation.md  (+2 more)
frontend-patches/: GeckoWebsocketContext.patch.md  ScreenSecretGecko.tsx
gecko-socket-rust/: Cargo.toml  GECKO_COLLISION_GAME_IDEAS.md  PERF_TODO.md  PRODUCTION_SCALING_PATTERNS.md  RESCUING_RUST_HOTPATH.md  SCALABILITY_REFACTOR.md  WATCHING_THE_SOCKET.md  rustfmt.toml
gecko-socket-rust/src/: main.rs
hellofriend/: .gitignore  ENERGY_SYSTEM.md  GECKO_MODELS_USAGE.md  recomputeEnergyExample.tsx  requirements.txt
hellofriendreact/: .gitignore  geckoEnergySocketExample.tsx  package-lock.json  (+1 more)
(+366 files in other folders)
